--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "livereload": "^0.9.3",
     "rollup": "^2.77.0",
     "rollup-plugin-copy": "^3.4.0",
